--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="SlimMessageBus" Version="2.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DAL.Abstract\DAL.Abstract.csproj" />
+    </ItemGroup>
+
 </Project>
