--- a/Web.API/appsettings.json
+++ b/Web.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=MYSQL_DB_SRV; port=3307; Database=tcm; uid=tcm; Password=p-7{a>YX"
+    "Default": "Server=127.0.0.1; port=3307; Database=tcm; uid=tcm; Password=p-7{a>YX"
   },
   "Serilog": {
     "Enrich": [
